Log files/overmind-console_20110312T172856.log
[0:Overmind19] INFO - Overmind online.
[0:Overmind19] INFO - Strategy: assignment0.MineMineMine@1bf7b23
[175:jython17] FATAL - Script Error:
javax.script.ScriptException: SyntaxError: mismatched input '/' expecting EOF in <script> at line number 1 at column number 0
	at org.python.jsr223.PyScriptEngine.scriptException(PyScriptEngine.java:179)
	at org.python.jsr223.PyScriptEngine.compileScript(PyScriptEngine.java:75)
	at org.python.jsr223.PyScriptEngine.eval(PyScriptEngine.java:31)
	at javax.script.AbstractScriptEngine.eval(Unknown Source)
	at edu.berkeley.nlp.starcraft.scripting.JythonInterpreter.onSendText(JythonInterpreter.java:133)
	at edu.berkeley.nlp.starcraft.overmind.Overmind.onSendText(Overmind.java:121)
	at org.bwapi.proxy.ProxyServer.processCallbacks(ProxyServer.java:230)
	at org.bwapi.proxy.ProxyServer.runGame(ProxyServer.java:168)
	at org.bwapi.proxy.ProxyServer.run(ProxyServer.java:76)
	at assignment0.MineMineMine.main(MineMineMine.java:271)
Caused by:   File "<script>", line 1
    /rate 5
    ^
SyntaxError: mismatched input '/' expecting EOF

	at org.python.core.PyException.fillInStackTrace(PyException.java:70)
	at java.lang.Throwable.<init>(Throwable.java:181)
	at java.lang.Exception.<init>(Unknown Source)
	at java.lang.RuntimeException.<init>(Unknown Source)
	at org.python.core.PyException.<init>(PyException.java:46)
	at org.python.core.PyException.<init>(PyException.java:43)
	at org.python.core.PyException.<init>(PyException.java:39)
	at org.python.core.PySyntaxError.<init>(PySyntaxError.java:22)
	at org.python.core.ParserFacade.fixParseError(ParserFacade.java:92)
	at org.python.core.ParserFacade.parseExpressionOrModule(ParserFacade.java:130)
	at org.python.util.PythonInterpreter.compile(PythonInterpreter.java:259)
	at org.python.util.PythonInterpreter.compile(PythonInterpreter.java:256)
	at org.python.util.PythonInterpreter.compile(PythonInterpreter.java:250)
	at org.python.jsr223.PyScriptEngine.compileScript(PyScriptEngine.java:70)
	... 8 more
